fix: broken ui on playlist id text overflow

--- a/src/components/Grids/ManagementPlaylistsPanelGridItem/styles.module.scss
+++ b/src/components/Grids/ManagementPlaylistsPanelGridItem/styles.module.scss
@@ -34,6 +34,7 @@
   justify-content: space-between;
 
   .gridItemTitle {
+    width: 18rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
