--- a/src/components/Panels/ManagementPanel/ManagementPlaylistPanel/styles.module.scss
+++ b/src/components/Panels/ManagementPanel/ManagementPlaylistPanel/styles.module.scss
@@ -7,4 +7,11 @@
   grid-auto-rows: min-content;
   grid-row-gap: 1.5rem;
   grid-template-columns: auto;
+
+  .title {
+    width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
